# text-extract-api

./: .env.example  .env.localhost.backup  .env.production  CAPROVER_DEPLOY.md  CELERY_WORKER_FIX.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_ENV_CAPROVER.env  PRE_DEPLOYMENT_CLEANUP.md  PRODUCTION_SETUP.md  captain-definition  docker-compose.caprover.yml  fix-extract-text-worker.md  fix_main.py  fix_main_proper.py  fix_tasks.py  local_cleanup.sh  pyproject.toml  pyproject.toml.backup  restart_services.sh  run.sh
client/: cli.py
config/: strategies.yaml
scripts/: caprover_cleanup.sh  entrypoint.sh  pre_deployment_cleanup.sh
tests/text_extract_api/extract/: __init__.py
tests/text_extract_api/extract/strategies/: __init__.py  test_ollama.py
text_extract_api/: celery_app.py  main.py
text_extract_api/extract/: tasks.py  tasks.py.broken
text_extract_api/extract/strategies/: docling.py  ollama.py  strategy.py
