[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "text_extract_api"
version = "0.2.0"
description = "Optimized PDF extraction API using Docling strategy with external AI endpoint support"
authors = [
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "celery",
    "redis",
    "uvicorn[standard]",
    "requests",
    "python-multipart",
    "Pillow",
    "python-magic==0.4.27",
    "setuptools",
    "PyYAML",
    "pydantic",
    "python-dotenv",
    "docling",
    "docling-parse",
    "pdf2image",
    "boto3",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib"
]
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.flake8]
max-line-length = 88
exclude = ["venv", "__pycache__", ".git", ".mypy_cache"]

[tool.setuptools.packages.find]
where = ["."]
include = ["text_extract_api*"]